added ways to stop heavy loading of pages

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -5,6 +5,8 @@
   <string id="30112">Bold</string>
   <string id="30113">Italic</string>
   <string id="30114">Show Featured</string>
+  <string id="30115">Featured Detail</string>
+  <string id="30116">Show Quick Detail</string>
 
   <string id="30119">Movie Line</string>
   <string id="30120">Movie</string>
